# drf-notes

./: .pdm-python  LICENSE  README.md  pyproject.toml  requirements.txt
src/.choreo/: components.yaml
src/backend/: .env.sample  Procfile  db.sqlite3
src/backend/.choreo/: components.yaml
src/backend/api/: models.py  serializers.py  urls.py  views.py
src/backend/api/migrations/: 0001_initial.py
src/backend/core/: settings.py  urls.py
src/frontend/: index.html  package-lock.json
src/frontend/src/: App.jsx  api.js
src/frontend/src/components/: Form.jsx  LoadingIndicator.jsx  Note.jsx  ProtectedRoute.jsx
src/frontend/src/pages/: Home.jsx  Login.jsx  NotFound.jsx  Register.jsx
