[project]
name = "drf-notes"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mostafa2k", email = "m2kappswindows8.1@gmail.com"},
]
dependencies = ["django>=5.1.7", "djangorestframework>=3.16.0", "django-cors-headers>=4.7.0", "djangorestframework-simplejwt>=5.5.0", "psycopg2-binary>=2.9.10", "python-dotenv>=1.1.0", "psycopg2>=2.9.10", "dj-database-url>=2.3.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
